--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ MarkupSafe==0.23
 South==0.8.4
 argparse==1.2.1
 django-appconf==0.6
-django-compressor==1.3
+django-compressor==1.4a1
 django-extensions==1.3.6
 six==1.6.1
-wsgiref==0.1.2
