--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.6.4
 Jinja2==2.7.2
 MarkupSafe==0.23
 South==0.8.4
+Werkzeug==0.9.4
 argparse==1.2.1
 django-appconf==0.6
 django-compressor==1.4a1
