--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==1.6.4
+Django==1.7b3
 Jinja2==2.7.2
 MarkupSafe==0.23
 South==0.8.4
@@ -6,5 +6,8 @@ Werkzeug==0.9.4
 argparse==1.2.1
 django-appconf==0.6
 django-compressor==1.4a1
+django-debug-toolbar==1.2
 django-extensions==1.3.6
+futures==2.1.6
 six==1.6.1
+sqlparse==0.1.11
