--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,5 @@
 Jinja2==2.7.2
+Markdown==2.4.1
 MarkupSafe==0.23
 South==0.8.4
 Werkzeug==0.9.4
@@ -7,6 +8,8 @@ django-appconf==0.6
 django-compressor==1.4a1
 django-debug-toolbar==1.2
 django-extensions==1.3.6
+django-filter==0.7
+djangorestframework==2.3.13
 futures==2.1.6
 six==1.6.1
 sqlparse==0.1.11
