--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,3 @@
-Jinja2==2.7.2
 Markdown==2.4.1
 MarkupSafe==0.23
 South==0.8.4
@@ -11,5 +10,6 @@ django-extensions==1.3.6
 django-filter==0.7
 djangorestframework==2.3.13
 futures==2.1.6
+pytz==2014.3
 six==1.6.1
 sqlparse==0.1.11
