--- a/web/resources/scripts/bower.json
+++ b/web/resources/scripts/bower.json
@@ -17,6 +17,9 @@
     "jquery": "~2.1.1",
     "underscore": "~1.6.0",
     "flot": "~0.8.3",
-    "angular-ui-calendar": "latest"
+    "angular-ui-calendar": "latest",
+    "moment": "~2.7.0",
+    "angular-cookies": "~1.2.18",
+    "jquery-ui": "~1.10.4"
   }
 }
