--- a/web/resources/scripts/bower.json
+++ b/web/resources/scripts/bower.json
@@ -25,6 +25,7 @@
     "qtip2": "~2.2.0",
     "handlebars": "~1.3.0",
     "ngModal": "~1.2.2",
-    "ngQuickDate": "~1.3.0"
+    "ngQuickDate": "~1.3.0",
+    "moment-range": "~1.0.2"
   }
 }
