--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,5 @@
+Django==1.7b3
+Jinja2==2.7.2
 Markdown==2.4.1
 MarkupSafe==0.23
 South==0.8.4
@@ -8,6 +10,7 @@ django-compressor==1.4a1
 django-debug-toolbar==1.2
 django-extensions==1.3.6
 django-filter==0.7
+django-templatetag-handlebars==1.2.0
 djangorestframework==2.3.13
 futures==2.1.6
 pytz==2014.3
