--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "browserify": "^9.0.8",
     "gulp": "^3.8.11",
     "gulp-connect": "^2.2.0",
+    "gulp-eslint": "^0.9.0",
     "gulp-livereload": "^3.8.0",
     "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.4",
