--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "babelify": "^6.0.2",
     "browserify": "^9.0.8",
+    "coffee-script": "^1.9.2",
     "gulp": "^3.8.11",
     "gulp-eslint": "^0.9.0",
     "gulp-livereload": "^3.8.0",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.4",
     "lodash.assign": "^3.1.0",
     "merge-stream": "^0.1.7",
