--- a/web/package.json
+++ b/web/package.json
@@ -10,21 +10,21 @@
   "license": "MIT",
   "dependencies": {
     "babel": "^5.1.11",
-    "babelify": "^6.0.2",
-    "browserify": "^9.0.8",
+    "babel-eslint": "^3.0.1",
+    "bluebird": "^2.9.24",
     "coffee-script": "^1.9.2",
-    "gulp": "^3.8.11",
-    "gulp-eslint": "^0.9.0",
-    "gulp-livereload": "^3.8.0",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-util": "^3.0.4",
+    "eslint": "^0.19.0",
+    "eslint-loader": "^0.10.0",
+    "jsx-loader": "^0.13.1",
     "lodash": "^3.7.0",
-    "lodash.assign": "^3.1.0",
-    "merge-stream": "^0.1.7",
+    "promise-loader": "^0.1.3",
     "react": "^0.13.2",
     "react-router": "^0.13.2",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.1.1"
+    "stylus-loader": "^1.1.0",
+    "webpack": "^1.8.9"
+  },
+  "devDependencies": {
+    "babel-core": "^5.1.11",
+    "babel-loader": "^5.0.0"
   }
 }
