--- a/web/package.json
+++ b/web/package.json
@@ -1,10 +1,9 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "description": "the front end of syllabus, a complete web solution for the modern university",
+  "description": "the front end of syllabus, a complete web solution for the modern academic environment",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress --colors --watch"
   },
   "author": "alec aivazis",
@@ -12,20 +11,14 @@
   "dependencies": {
     "babel": "^5.1.11",
     "babel-eslint": "^3.0.1",
-    "bluebird": "^2.9.24",
+    "babel-loader": "^5.0.0",
     "coffee-script": "^1.9.2",
     "eslint": "^0.19.0",
     "eslint-loader": "^0.10.0",
-    "jsx-loader": "^0.13.1",
     "lodash": "^3.7.0",
-    "promise-loader": "^0.1.3",
     "react": "^0.13.2",
     "react-router": "^0.13.2",
     "stylus-loader": "^1.1.0",
     "webpack": "^1.8.9"
-  },
-  "devDependencies": {
-    "babel-core": "^5.1.11",
-    "babel-loader": "^5.0.0"
   }
 }
