changed webpack build parameters

--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
   "description": "the front end of syllabus, a complete web solution for the modern academic environment",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --progress --colors --watch"
+    "build": "webpack -d --watch"
   },
   "author": "alec aivazis",
   "license": "MIT",
