--- a/web/package.json
+++ b/web/package.json
@@ -12,12 +12,14 @@
     "babel": "^5.1.11",
     "babel-eslint": "^3.0.1",
     "coffee-script": "^1.9.2",
+    "css-loader": "^0.11.2",
     "eslint": "^0.19.0",
     "eslint-loader": "^0.10.0",
     "lodash": "^3.7.0",
     "react": "^0.13.2",
     "react-router": "^0.13.2",
     "react-style-normalizer": "^1.2.7",
+    "style-loader": "^0.11.0",
     "webpack": "^1.8.9"
   }
 }
