--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "lodash": "^3.7.0",
     "normalize.css": "^3.0.3",
     "react": "^0.13.2",
+    "react-bootstrap": "^0.21.0",
     "react-router": "^0.13.2",
     "react-style-normalizer": "^1.2.7",
     "style-loader": "^0.11.0",
