--- a/web/package.json
+++ b/web/package.json
@@ -11,17 +11,24 @@
   "dependencies": {
     "babel": "^5.1.11",
     "babel-eslint": "^3.0.1",
+    "bootstrap": "^3.3.4",
+    "classnames": "^1.2.1",
     "coffee-script": "^1.9.2",
     "css-loader": "^0.11.2",
     "eslint": "^0.19.0",
     "eslint-loader": "^0.10.0",
+    "file-loader": "^0.8.1",
+    "jquery": "^2.1.3",
     "lodash": "^3.7.0",
     "normalize.css": "^3.0.3",
     "react": "^0.13.2",
     "react-bootstrap": "^0.21.0",
     "react-router": "^0.13.2",
+    "react-router-bootstrap": "^0.13.0",
     "react-style-normalizer": "^1.2.7",
     "style-loader": "^0.11.0",
+    "stylus-loader": "^1.1.0",
+    "url-loader": "^0.5.5",
     "webpack": "^1.8.9"
   }
 }
