--- a/web/package.json
+++ b/web/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "frontend",
+  "name": "syllabus-frontend",
   "version": "1.0.0",
   "description": "the front end of syllabus, a complete web solution for the modern academic environment",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -d --watch"
+    "build": "webpack -d --watch",
+    "test": "karma start"
   },
   "author": "alec aivazis",
   "license": "MIT",
@@ -19,7 +20,14 @@
     "eslint-loader": "^0.10.0",
     "file-loader": "^0.8.1",
     "jquery": "^2.1.3",
+    "karma": "^0.12.31",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.8",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-mocha": "^0.1.10",
+    "karma-safari-launcher": "^0.1.1",
     "lodash": "^3.7.0",
+    "mocha": "^2.2.4",
     "normalize.css": "^3.0.3",
     "react": "^0.13.2",
     "react-bootstrap": "^0.21.0",
