--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.8",
+    "karma-cli": "0.0.4",
     "karma-firefox-launcher": "^0.1.4",
     "karma-mocha": "^0.1.10",
     "karma-safari-launcher": "^0.1.1",
