--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "karma-firefox-launcher": "^0.1.4",
     "karma-mocha": "^0.1.10",
     "karma-safari-launcher": "^0.1.1",
+    "karma-webpack": "^1.5.0",
     "lodash": "^3.7.0",
     "mocha": "^2.2.4",
     "normalize.css": "^3.0.3",
