--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "syllabus-frontend",
   "version": "1.0.0",
-  "description": "the front end of syllabus, a complete web solution for the modern academic environment",
+  "description": "the front end of syllabus, a comprehensive web solution for the modern academic environment",
   "main": "index.js",
   "scripts": {
     "build": "webpack -d --watch",
@@ -10,6 +10,7 @@
   "author": "alec aivazis",
   "license": "MIT",
   "dependencies": {
+    "axis": "^0.3.1",
     "babel": "^5.1.11",
     "babel-eslint": "^3.0.1",
     "bootstrap": "^3.3.4",
@@ -19,6 +20,7 @@
     "eslint": "^0.19.0",
     "eslint-loader": "^0.10.0",
     "file-loader": "^0.8.1",
+    "jeet": "^6.1.2",
     "jquery": "^2.1.3",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
@@ -37,8 +39,11 @@
     "react-router": "^0.13.2",
     "react-router-bootstrap": "^0.13.0",
     "react-style-normalizer": "^1.2.7",
+    "reflux": "^0.2.7",
+    "rupture": "^0.6.1",
     "style-loader": "^0.11.0",
     "stylus-loader": "^1.1.0",
+    "stylus": "^0.50.0",
     "url-loader": "^0.5.5",
     "webpack": "^1.8.9"
   }
