--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axis": "^0.3.1",
     "babel": "^5.1.11",
+    "babel-core": "^5.2.17",
     "babel-eslint": "^3.0.1",
+    "babel-loader": "^5.0.0",
     "bootstrap": "^3.3.4",
     "classnames": "^1.2.1",
     "coffee-script": "^1.9.2",
@@ -42,8 +44,8 @@
     "reflux": "^0.2.7",
     "rupture": "^0.6.1",
     "style-loader": "^0.11.0",
-    "stylus-loader": "^1.1.0",
     "stylus": "^0.50.0",
+    "stylus-loader": "^1.1.0",
     "url-loader": "^0.5.5",
     "webpack": "^1.8.9"
   }
